--- a/Part 2 - Data Structures/Chapter 3 - Dictionaries and Sets.ipynb
+++ b/Part 2 - Data Structures/Chapter 3 - Dictionaries and Sets.ipynb
@@ -168,6 +168,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A [3, 4, 0, 2]\n",
+      "B [5, 5]\n",
+      "C [0]\n",
+      "D [3, 4]\n",
+      "E [5, 4, 5, 2]\n",
+      "H [0, 3]\n",
+      "I [1, 9, 2]\n",
+      "J [4, 6]\n",
+      "K [1, 3, 1, 2]\n",
+      "L [6, 0, 7, 0]\n",
+      "M [8, 10]\n",
+      "N [4, 7, 3, 2, 3]\n",
+      "P [0, 6]\n",
+      "R [10]\n",
+      "S [5, 3]\n",
+      "T [9, 5, 2]\n",
+      "V [5]\n",
+      "W [4]\n",
+      "X [7, 6]\n",
+      "Y [10, 4]\n",
+      "Z [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Handling Missing Keys with setdefault\n",
+    "# Not always optimal to use d.get(k, default), especially when updating the value\n",
+    "\n",
+    "# Create a dictionary of key: letter, value: list[numbers]\n",
+    "import random, string\n",
+    "random.seed(5)\n",
+    "string_index = {}\n",
+    "for i in range(50):\n",
+    "    k = random.choice(string.ascii_letters).upper()\n",
+    "    v = random.randint(0, 10)\n",
+    "    occurrences = string_index.get(k, [])\n",
+    "    occurrences.append(v)\n",
+    "    string_index[k] = occurrences\n",
+    "    \n",
+    "# Print in Alphabetic Order\n",
+    "for letter in sorted(string_index, key=str.upper):\n",
+    "    print(letter, string_index[letter])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A [3, 4, 0, 2]\n",
+      "B [5, 5]\n",
+      "C [0]\n",
+      "D [3, 4]\n",
+      "E [5, 4, 5, 2]\n",
+      "H [0, 3]\n",
+      "I [1, 9, 2]\n",
+      "J [4, 6]\n",
+      "K [1, 3, 1, 2]\n",
+      "L [6, 0, 7, 0]\n",
+      "M [8, 10]\n",
+      "N [4, 7, 3, 2, 3]\n",
+      "P [0, 6]\n",
+      "R [10]\n",
+      "S [5, 3]\n",
+      "T [9, 5, 2]\n",
+      "V [5]\n",
+      "W [4]\n",
+      "X [7, 6]\n",
+      "Y [10, 4]\n",
+      "Z [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Those 3 lines dealing with occurrences can be replaced with\n",
+    "# d.setdefault\n",
+    "import random, string\n",
+    "random.seed(5)\n",
+    "string_index = {}\n",
+    "for i in range(50):\n",
+    "    k = random.choice(string.ascii_letters).upper()\n",
+    "    v = random.randint(0, 10)\n",
+    "    string_index.setdefault(k, []).append(v)\n",
+    "    \n",
+    "# Print in Alphabetic Order\n",
+    "for letter in sorted(string_index, key=str.upper):\n",
+    "    print(letter, string_index[letter])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
