Finished code snippets for Chapter 3. Need to finish formatting.

--- a/Part 2 - Data Structures/Chapter 3 - Dictionaries and Sets.ipynb
+++ b/Part 2 - Data Structures/Chapter 3 - Dictionaries and Sets.ipynb
@@ -274,10 +274,406 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Mappings with Flexible Key Lookup\n",
+    "# Sometimes it's convenient to have mappings return a made-up value when a missing key is searched\n",
+    "# Two main approaches: defaultdict, or to add a super method __missing__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A [3, 4, 0, 2]\n",
+      "B [5, 5]\n",
+      "C [0]\n",
+      "D [3, 4]\n",
+      "E [5, 4, 5, 2]\n",
+      "H [0, 3]\n",
+      "I [1, 9, 2]\n",
+      "J [4, 6]\n",
+      "K [1, 3, 1, 2]\n",
+      "L [6, 0, 7, 0]\n",
+      "M [8, 10]\n",
+      "N [4, 7, 3, 2, 3]\n",
+      "P [0, 6]\n",
+      "R [10]\n",
+      "S [5, 3]\n",
+      "T [9, 5, 2]\n",
+      "V [5]\n",
+      "W [4]\n",
+      "X [7, 6]\n",
+      "Y [10, 4]\n",
+      "Z [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# defaultdict\n",
+    "# When instantiating defaultdict, provide a callable that is used to produce a default value whenever __getitem__ is passed a nonexistent key\n",
+    "import random, string, collections\n",
+    "random.seed(5)\n",
+    "string_index = collections.defaultdict(list)\n",
+    "for i in range(50):\n",
+    "    k = random.choice(string.ascii_letters).upper()\n",
+    "    v = random.randint(0, 10)\n",
+    "    string_index[k].append(v)\n",
+    "    \n",
+    "# Print in Alphabetic Order\n",
+    "for letter in sorted(string_index, key=str.upper):\n",
+    "    print(letter, string_index[letter])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A [3, 4, 0, 2]\n",
+      "B [5, 5]\n",
+      "C [0]\n",
+      "D [3, 4]\n",
+      "E [5, 4, 5, 2]\n",
+      "H [0, 3]\n",
+      "I [1, 9, 2]\n",
+      "J [4, 6]\n",
+      "K [1, 3, 1, 2]\n",
+      "L [6, 0, 7, 0]\n",
+      "M [8, 10]\n",
+      "N [4, 7, 3, 2, 3]\n",
+      "P [0, 6]\n",
+      "R [10]\n",
+      "S [5, 3]\n",
+      "T [9, 5, 2]\n",
+      "V [5]\n",
+      "W [4]\n",
+      "X [7, 6]\n",
+      "Y [10, 4]\n",
+      "Z [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# __missing__ method\n",
+    "# This is called by __getitem__ for d[k] operator\n",
+    "class StringDict(dict):\n",
+    "    def __missing__(self, key):\n",
+    "        self[key] = []\n",
+    "        return self[key]\n",
+    "\n",
+    "import random, string\n",
+    "random.seed(5)\n",
+    "string_index = StringDict()\n",
+    "for i in range(50):\n",
+    "    k = random.choice(string.ascii_letters).upper()\n",
+    "    v = random.randint(0, 10)\n",
+    "    string_index[k].append(v)\n",
+    "    \n",
+    "# Print in Alphabetic Order\n",
+    "for letter in sorted(string_index, key=str.upper):\n",
+    "    print(letter, string_index[letter])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variations of dict\n",
+    "# collections.OrderedDict\n",
+    "#    Maintains keys in insertion order, allowing for iteration over items in a predictable order. The popitem() method pops the first item by default, but if called as .popitem(last=True), the last item added will pop instead.\n",
+    "# collections.ChainMap\n",
+    "#    Holds a list of mappings that can be searched as one. The lookup is performed on each mapping in order, and succeeds if the key is found in any of them. This is useful for interpreters for languages with nested scopes, where each mapping represents a scope context.\n",
+    "# collections.Counter\n",
+    "#    A mapping that holds an integer count for each key. Updating a key adds to its count. Counter implements the + and - operators to combine tallies, and other useful methods such as most_common([n]), which returns an ordered list of tuples with the n most common items and their counts.\n",
+    "# collections.UserDict\n",
+    "#    A pure Python implementation of a mapping that works like a standard dict. UserDict is designed to be sublcassed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sublcassing UserDict\n",
+    "# It's preferred to subclass UserDict over dict, as the built-in has some implementation shortcuts that end up forcing up to override methods that we can just inherit from UserDict with no problems.\n",
+    "# Note that UserDict doesn't inherit from dict, but has an internal dict instance, called `data`, which holds the actual items. This helps avoid undesired recursion.\n",
+    "\n",
+    "# Example class is a dict that maps keys to strings when looked up. Actual use case is with Ping.io project, where as programmable board with GPIO pins (e.g. Raspberry Pi, Arduino) is represented by a board object with a board.pins attribute.\n",
+    "\n",
+    "# Version subclassing dict\n",
+    "class StrKeyDict0(dict):\n",
+    "    # Check if key is already a str, if it is and missing, raise KeyError\n",
+    "    # Otherwise build str from key and look it up\n",
+    "    def __missing__(self, key):\n",
+    "        if isinstance(key, str):\n",
+    "            raise KeyError(key)\n",
+    "        return self[str(key)]\n",
+    "\n",
+    "    # The get method delegates to __getitem__ by using the self[key] notation; this allows __missing__ the opportunity to act\n",
+    "    # If a KeyError was raised, __missing__ already failed, so we return the default\n",
+    "    def get(self, key, default=None):\n",
+    "        try:\n",
+    "            return self[key]\n",
+    "        except KeyError:\n",
+    "            return default\n",
+    "    \n",
+    "    # Search for the unmodified key, then for a str built from the key   \n",
+    "    def __contains__(self, key):\n",
+    "        return key in self.keys() or str(key) in self.keys()\n",
+    "    \n",
+    "    \n",
+    "import collections\n",
+    "\n",
+    "# Version extending UserDict\n",
+    "class StrKeyDict(collections.UserDict):\n",
+    "    def __missing__(self, key):\n",
+    "        # Same as example above\n",
+    "        if isinstance(key, str):\n",
+    "            raise KeyError(key)\n",
+    "        return self[str(key)]\n",
+    "    \n",
+    "    # This method is simpler; we can assume all stored keys are str and we can check on self.data instead of involing self.keys()\n",
+    "    def __contains__(self, key):\n",
+    "        return str(key) in self.data\n",
+    "    \n",
+    "    # Converts any key to a str. This method is easier to overwrite when we can delegate to the self.data attribute\n",
+    "    def __setitem__(self, key, item):\n",
+    "        self.data[str(key)] = item\n",
+    "        ddd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Because UserDict subclasses MutableMapping, the remaining methods are available\n",
+    "# MutableMapping.update\n",
+    "#    Can be called directly, but is also used by __init__ to load the instance from other mappings, from iterables of (key, value) pairs, and keyword arguments. Because it uses self[key] = value to add items, it calls our implementation of __setitem__.\n",
+    "# Mapping.get\n",
+    "#    In StrKeyDict0, we had to code our own `get` to obtain results consistent with __getitem__, but since we inherited Mapping.get, it's implemented exactly like StrKeyDict0.get"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_proxy = {1: 'A'}\n",
+      "'mappingproxy' object does not support item assignment\n",
+      "d_proxy = {1: 'A', 2: 'B'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Immutable Mappings\n",
+    "# The types module provides a wrapper class called MappingProxyType, which, given a mapping, returns a mappingproxy instance that is a dynamic, read-only view of the original mapping. This means updates to the original mapping can be seen in mappingproxy, but changes cannot be made through it.\n",
+    "# This could be useful again in the Ping.io scenario - if we expose a Board subclass to a client via a public API, clients can't accidentally add, remove, or change pins by accident.\n",
+    "\n",
+    "from types import MappingProxyType\n",
+    "d = {1: 'A'}\n",
+    "d_proxy = MappingProxyType(d)\n",
+    "print(f\"d_proxy = {d_proxy}\")\n",
+    "\n",
+    "try:\n",
+    "    d_proxy[2] = 'B'\n",
+    "except TypeError as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "d[2] = 'B'\n",
+    "print(f\"d_proxy = {d_proxy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set(l) = {'spam', 'eggs'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set Theory\n",
+    "# A set is a collection of unique objects. A basic use case is removing duplication.\n",
+    "l = ['spam', 'spam', 'eggs', 'spam']\n",
+    "print(f\"set(l) = {set(l)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 5 common elements\n",
+      "Found 5 common elements\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set elements must be hashable. The set type is not hashable, but frozenset is, so you can have frozenset elements inside a set.\n",
+    "# In addition to guaranteeing uniqueness, set types implement the essential set operations as infix operators.\n",
+    "# So given two sets a and b, a | b returns their union, a & b computes the intersection, and a - b the difference.\n",
+    "# Smart use of set operations can reduce both the line count and runtime of Python programs, at the same time making code easier to read and reason about. \n",
+    "\n",
+    "# Here's an example of counting how many needles occur in a haystack via sets and loops.\n",
+    "import random\n",
+    "random.seed(5)\n",
+    "\n",
+    "needles = set([random.randint(1, 100) for i in range(10)])\n",
+    "haystack = set([random.randint(1, 100) for i in range(100)])\n",
+    "\n",
+    "found = len(needles & haystack)\n",
+    "print(f\"Found {found} common elements\")\n",
+    "\n",
+    "found = 0\n",
+    "for n in needles:\n",
+    "    if n in haystack:\n",
+    "        found += 1\n",
+    "print(f\"Found {found} common elements\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type(s) = <class 'set'>\n",
+      "s = {1}\n",
+      "s.pop() = 1\n",
+      "s = set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set Literals\n",
+    "# The syntax of set literals {1}, {1, 2} looks exactly the same as math notation, with one important exception: there's no literal notation for the empty set, so we must remember to write `set()`.\n",
+    "# If you write {}, you're creating an empty dict -- this hasn't changed.\n",
+    "# Literal set syntax (e.g. {1, 2, 3}) is both faster and more readable than calling the constructor (e.g. set([1, 2, 3])). The latter form is slower because it has to look up the set name to fetch the constructor, then build a list, and finally pass the list to the constructor. With the literal syntax, Python runs a specialized BUILD_SET bytecode. \n",
+    "\n",
+    "s = {1}\n",
+    "print(f\"type(s) = {type(s)}\")\n",
+    "print(f\"s = {s}\")\n",
+    "print(f\"s.pop() = {s.pop()}\")\n",
+    "print(f\"s = {s}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset({0, 1, 2, 3, 4, 5, 6, 7, 8, 9})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# There is no special syntax to represent frozenset literals -- they must be created by calling the constructor.\n",
+    "print(frozenset(range(10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s = {'×', '÷', '+', '©', '®', '¬', '#', '¢', '£', '§', '%', '$', '¤', '¥', '>', '=', '<', '±', '°', '¶', 'µ'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set Comprehensions\n",
+    "# Set comprehensions (setcomps) work similarly to listcomps and dictcomps. \n",
+    "from unicodedata import name\n",
+    "s = {chr(i) for i in range(32, 256) if 'SIGN' in name(chr(i), '')}\n",
+    "print(f\"s = {s}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Set Operations\n",
+    "\n",
+    "\n",
+    "| s & z | s.__and__(z)  | Intersection of s and z |\n",
+    "|-------|---------------|--------------------------|\n",
+    "| z & s | s.__rand__(z) | Reversed & operator   |\n",
+    "|-------|---------------|--------------------------|\n",
+    "\n",
+    "s &= z s.__iand(z)__ s updated with intersection of s and z\n",
+    "s | z s.__or__(z) Union of s and z\n",
+    "z | s s.__ror__(z) Reversed |\n",
+    "s |= z s.__ior__(z) s updated with union of s and z\n",
+    "s - z s.__sub__(z) Relative complement or difference between s and z\n",
+    "z - s s.__rsub__(z) Reversed - operator\n",
+    "s -= z s.__isub__(z) s updated with difference between s and z\n",
+    "s ^ z s.__xor__(z) Symmetric difference (the complement of the intersection s & z)\n",
+    "z ^ s s.__rxor__(z) Reversed ^ operator\n",
+    "s ^= z s.__ixor__(z) s updated with symmetric difference of s and z\n",
+    "\n",
+    "#### Set Comparison Operators\n",
+    "s.isdisjoint(z) s and z are disjoint (no elements in common)\n",
+    "e in s s.__contains__(e) Elements e is a member of s\n",
+    "s <= z s.__le__(z) s is a subset of the z set\n",
+    "s < z s.__lt__(z) s is a proper subset of the z set\n",
+    "s >= z s.__ge__(z) s is a superset of the z set\n",
+    "s > z s.__gt__(z) s is a proper superset of the z set\n",
+    "\n",
+    "##### Additional set methods\n",
+    "s.add(e) Add element e to s\n",
+    "s.clear() Remove all elements of s\n",
+    "s.copy() Shallow copy of s\n",
+    "s.discard(e) Remove element e from s if it is present\n",
+    "s.__iter__() Get iterator over s\n",
+    "s.__len__() len(s)\n",
+    "s.pop() Remove and return an element from s, raising KeyError if it is empty\n",
+    "s.remove(e) Remove element e from s, raising KeyError if e not in s"
+   ]
   }
  ],
  "metadata": {
